testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport5.errors.txt
lateBoundAssignmentDeclarationSupport5.js(11,15): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
lateBoundAssignmentDeclarationSupport5.js(14,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
lateBoundAssignmentDeclarationSupport5.js(15,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
usage.js(2,15): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport5.js");
    const inst =  new x.F();
                  ~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const y = inst["my-fake-sym"];
    const z = inst[x.S];
    
==== lateBoundAssignmentDeclarationSupport5.js (3 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    function F() {
    }
    F.prototype = {
        [_sym]: "ok",
        [_str]: "ok"
    }
    const inst =  new F();
                  ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const _y = inst[_str];
    const _z = inst[_sym];
    module.exports.F = F;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports.S = _sym;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.